Connect the UI to Code

--- a/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MFe-JN-lK6">
                                         <rect key="frame" x="0.0" y="75" width="151" height="30"/>
                                         <state key="normal" title="Set Default Label Text"/>
+                                        <connections>
+                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dBF-Xo-Irn"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -49,6 +52,10 @@
                             <constraint firstAttribute="trailingMargin" secondItem="7Vm-Qm-WZH" secondAttribute="trailing" id="r98-pV-8Bd"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mealNameLabel" destination="gRd-ij-SGh" id="UlO-62-eCV"/>
+                        <outlet property="nameTextField" destination="NzZ-gg-Ezs" id="Eg1-1O-940"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
